--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "io.mockk:mockk:1.13.4"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 }
