--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -32,14 +32,15 @@ android {
 }
 
 dependencies {
-    implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'androidx.paging:paging-common-ktx:3.1.1'
+    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "androidx.paging:paging-common-ktx:3.1.1"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation "junit:junit:4.13.2"
     testImplementation "io.mockk:mockk:1.13.4"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
 }
