--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,16 +50,13 @@ android {
 
 dependencies {
     implementation project(':domain')
-    def paging_version = "3.1.1"
-    implementation "androidx.paging:paging-runtime:$paging_version"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha17"
     implementation "io.coil-kt:coil-compose:2.2.2"
 
     implementation "androidx.core:core-ktx:1.9.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
-    implementation "androidx.appcompat:appcompat:1.6.1"
-    implementation "androidx.fragment:fragment-ktx:1.5.5"
-    implementation "androidx.fragment:fragment:1.5.5"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha01"
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "com.google.android.material:material:1.6.0"
@@ -71,6 +68,7 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     testImplementation "junit:junit:4.13.2"
+    testImplementation "io.mockk:mockk:1.13.4"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
